=========================================================================
CHANGE LOG
=========================================================================

2007-04-03  Warren L. DeLano <warren@delsci.com>

	* ray option to png
	
2007-04-01  Warren L. DeLano <warren@delsci.com>

	* unsupported surface_types: 4,5 ->5,6; 4 now related to 3
	
	* fixed mouse_wheel_scale bug
	
2007-03-30  Warren L. DeLano <warren@delsci.com>

	* modified multithreaded async_builds to improve parallelism
	
2007-03-24  Warren L. DeLano <warren@delsci.com>

	* allow blank argument values in the command parser 

	* added skip argument to python block command
	
2007-03-23  Warren L. DeLano <warren@delsci.com>

	Changes up to 1.00b19

	* minor changes to better comply with GNU Build System: CHANGES is
	now ChangeLog, also added NEWS, COPYING, AUTHORS.

	* added autoconf-based build (for in-place install only) -- just
	Linux for starters missing macros for Mac OS X / X11 / Fink.
	
	* renamed all Makefile to Makefile.delsci in order to make room
	for an autoconf-based build

	* fixed bug with scenes in interpolated views
    
	* pymol now draws h_bonds from proton to acceptor if proton
	present and provided that h_bond_from_proton setting is true

	* ray_scatter setting (gives a nice increase in image realism)

	* ray_trace_trans_cutoff, ray_trace_persist_cutoff settings

	* improved transparency model with ray_transparency_oblique

	* alignment objects now created by alignment menus

	* support for scenes in interpolated views (wow that is cool).

	* new movie_fps setting subordiantes movie_delay

	* support for session file compression
        (default off for backwards compatibility)

Changes up to 1.00b16-18

	* fixed shadow transparency for per-atom triangle transparency

	* partial session saves & restores (objects only)

	* group members starting with internal ._ are now hidden too

	* group_arrow_prefix setting

	* new 'extract object' item in selection menus
